<resources>
    <string name="app_name">HabitTimer</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>


<!--    dialog_input_period-->
    <string name="period_number_dummy">2</string>
    <string name="period_unit_dummy">週間</string>
    <string name="ok">OK</string>
    <string name="cancel">キャンセル</string>


<!--    activity_main-->
    <string name="create_habit">習慣を追加</string>

<!--    fragment_habit-->
    <string name="habit_done">実行した</string>

<!--    fragment_input_habit-->
    <string name="title">タイトル</string>
    <string name="habit_cycle">習慣の周期</string>
    <string name="habit_cycle_dummy">1週間</string>

</resources>
