<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/input_bottom_sheet"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    app:cardCornerRadius="20dp">

    <View
        android:id="@+id/accentBackground"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorAccentDark"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:baselineAligned="true"
        app:layout_constraintBottom_toBottomOf="@+id/accentBackground"
        app:layout_constraintEnd_toEndOf="@+id/accentBackground"
        app:layout_constraintStart_toStartOf="@+id/accentBackground"
        app:layout_constraintTop_toTopOf="@+id/accentBackground">

        <TextView
            android:id="@+id/tv_cycle_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:baselineAlignedChildIndex="1"
            android:text="@string/period_number_dummy"
            android:textColor="@color/WHITE"
            android:textSize="45sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_cycle_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:baselineAlignedChildIndex="2"
            android:text="@string/period_unit_dummy"
            android:textColor="@color/GRAY"
            android:textSize="45sp"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_cycle_cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/accentBackground">

        <NumberPicker
            android:id="@+id/np_number"
            android:theme="@style/CustomNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp" />

        <NumberPicker
            android:id="@+id/np_unit"
            android:theme="@style/CustomNumberPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_cycle_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/ok"
        android:textColor="@color/colorAccentDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_cycle_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/cancel"
        android:textColor="@color/colorAccentDark"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_cycle_ok"
        app:layout_constraintEnd_toStartOf="@+id/tv_cycle_ok" />


</androidx.constraintlayout.widget.ConstraintLayout>
